[tool.poetry]
name = "pocx"
version = "0.2.2"
description = "A Simple, Fast and Powerful poc engine tools was built by antx, which support synchronous mode and asynchronous mode."
authors = ["antx <wkaifeng2007@163.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/antx-code/pocx"
repository = "https://github.com/antx-code/pocx"
keywords = ["async", "poc", "engine", "pocx"]

[[tool.poetry.source]]
name = "aliyun"
url = "https://mirrors.aliyun.com/pypi/simple"
default = true

[tool.poetry.dependencies]
python = "^3.8"
httpx = "^0.22.0"
loguru = "^0.6.0"
urllib3 = "^1.26.9"

[tool.poetry.dev-dependencies]
httpx = "^0.22.0"
loguru = "^0.6.0"
urllib3 = "^1.26.9"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
