[tool.poetry]
name = "pocx"
version = "0.2.3"
description = "A Simple, Fast and Powerful poc engine tools was built by antx, which support synchronous mode and asynchronous mode."
authors = ["antx <wkaifeng2007@163.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/antx-code/pocx"
repository = "https://github.com/antx-code/pocx"
keywords = ["async", "poc", "engine", "pocx"]

[[tool.poetry.source]]
name = "aliyun"
url = "https://mirrors.aliyun.com/pypi/simple"
priority = "primary"

[tool.poetry.dependencies]
python = "^3.8"
urllib3 = "^1.26.9"
httpx = "^0.24.1"
loguru = "^0.7.0"

[tool.poetry.dev-dependencies]
urllib3 = "^1.26.9"
httpx = "^0.24.1"
loguru = "^0.7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
